--- a/src/Hives/hive.css
+++ b/src/Hives/hive.css
@@ -7,6 +7,8 @@
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   font-family: 'Arial', sans-serif;
+  max-height: 680px;
+  overflow-y: scroll;
 }
 
 /* Naslov */
