--- a/src/Admin/manageorder.css
+++ b/src/Admin/manageorder.css
@@ -2,9 +2,10 @@
 
 /* General table styles */
 table {
-    width: 100%;
+    width: 50%;
     border-collapse: collapse;
     margin-top: 20px;
+    margin-left: 300px;
   }
   
   th,
@@ -15,7 +16,7 @@ table {
   }
   
   th {
-    background-color: #4CAF50;
+    background-color: black;
     color: white;
   }
   
@@ -24,16 +25,16 @@ table {
   }
   
   button {
-    background-color: #4CAF50;
+    background-color: black;
     color: white;
     border: none;
     padding: 8px 16px;
     cursor: pointer;
     border-radius: 4px;
   }
-  
+
   button:hover {
-    background-color: #45a049;
+    background-color: orange;
   }
   
   /* Table title */
