--- a/src/Pages/Home/home.css
+++ b/src/Pages/Home/home.css
@@ -21,7 +21,7 @@
   
   /* Gornja navigacija */
   .dashboard-nav {
-    background-color: #007bff;
+    background-color: black;
     color: white;
     padding: 20px;
     display: flex;
@@ -173,7 +173,7 @@
     /* Responsive Navigation Toggle */
     .menu-toggle {
       display: block;
-      background-color: #007bff;
+      background-color: black;
       color: white;
       padding: 10px;
       border-radius: 5px;
