--- a/src/UsersED/usersed.css
+++ b/src/UsersED/usersed.css
@@ -11,7 +11,6 @@
     overflow-y: scroll;
   }
   
-  
   .users-title {
     font-size: 24px;
     font-weight: bold;
@@ -53,7 +52,7 @@
   .user-name {
     font-size: 18px;
     font-weight: bold;
-    color: #0056b3;
+    color: black;
   }
   
   .user-email,
@@ -69,7 +68,7 @@
     border-radius: 5px;
     cursor: pointer;
     color: white;
-    background-color: #0056b3;
+    background-color: black;
   }
   
   button:active {
