--- a/src/Pages/Home/home.css
+++ b/src/Pages/Home/home.css
@@ -15,6 +15,9 @@
   /* Glavni kontejner Dashboard-a */
   .dashboard {
     display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: red;
     height: 100vh;
     flex-direction: column;
   }
