--- a/src/Auth/reglog.css
+++ b/src/Auth/reglog.css
@@ -7,9 +7,9 @@
 
 body {
     font-family: Arial, sans-serif;
-    display: flex;
+    /* display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: center; */
     min-height: 100vh;
     background-color: orange;
 }
