--- a/src/Hives/hive.css
+++ b/src/Hives/hive.css
@@ -1,16 +1,22 @@
 /* Kontejner za sadržaj */
 .hives-container {
-  min-width: 800px;
   padding: 20px;
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   background-color: #f9f9f9;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   font-family: 'Arial', sans-serif;
-  max-height: 680px;
   overflow-y: scroll;
-  margin-left: 150px;
-}
+  margin-left: 100px;
 
+}
+.pretraga{
+  width: 70%;
+}
 /* Naslov */
 .hives-title {
   font-size: 24px;
@@ -23,6 +29,7 @@
 /* Lista košnica */
 .hives-list {
   display: flex;
+  width: 70%;
   flex-direction: column;
   gap: 15px;
 }
