--- a/src/UsersED/usersed.css
+++ b/src/UsersED/usersed.css
@@ -1,16 +1,22 @@
 /* Kontejner za sadržaj */
 .users-container {
-    min-width: 800px;
-    margin: 40px auto;
-    padding: 20px;
-    background-color: #f9f9f9;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    font-family: 'Arial', sans-serif;
-    max-height: 680px;
-    overflow-y: scroll;
+  padding: 20px;
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #f9f9f9;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  font-family: 'Arial', sans-serif;
+  overflow-y: scroll;
+  margin-left: 100px;
   }
   
+  .pretraga{
+    width: 70%;
+  }
   .users-title {
     font-size: 24px;
     font-weight: bold;
@@ -20,6 +26,7 @@
   }
   
   .users-list {
+    width: 70%;
     margin-top: 10px;
     display: flex;
     flex-direction: column;
