--- a/src/Pages/Home/profile.css
+++ b/src/Pages/Home/profile.css
@@ -1,6 +1,6 @@
 .profile-Container{
     height: 100vh;
-    background-color: green;
+    /* background-color: green; */
     display: flex;
     align-items: center;
     justify-content: center;
