--- a/src/Navigation/header.css
+++ b/src/Navigation/header.css
@@ -4,7 +4,7 @@
     align-items: center;
     height: 10vh;
     padding: 10px 20px;
-    background-color: #f7e4b2;
+    background: #f7e4b2;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   }
   
