--- a/src/Users/userForm.css
+++ b/src/Users/userForm.css
@@ -1,13 +1,14 @@
 /* formusers.css */
 
-.form-container {
+.form-container-user {
     width: 50vw;
-    margin: 40px auto;
     padding: 25px;
-    background-color: #ffffff;
+    background-color: #f7e4b2;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     font-family: 'Arial', sans-serif;
+    margin-left: 450px;
+    margin-top: 50px;
   }
   
   .form-title {
@@ -131,7 +132,7 @@
   /* === RESPONSIVE STILOVI === */
   
   @media (max-width: 768px) {
-    .form-container {
+    .form-container-user {
       padding: 20px;
       margin: 20px auto;
     }
@@ -152,7 +153,7 @@
   }
   
   @media (max-width: 480px) {
-    .form-container {
+    .form-container-user {
       padding: 15px;
     }
   
