--- a/src/Hive/hives.css
+++ b/src/Hive/hives.css
@@ -3,10 +3,10 @@
     width: 50vw;
     margin: 40px auto;
     padding: 25px;
-    background-color: #ffffff;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     font-family: 'Arial', sans-serif;
+    background-color: #f7e4b2;
   }
   
   .form-title {
