--- a/src/Hives/hive.css
+++ b/src/Hives/hive.css
@@ -39,7 +39,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 15px;
-  background-color: #fff;
+  background-color:#f7e4b2;
   border-radius: 8px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   transition: transform 0.2s ease, box-shadow 0.2s ease;
