--- a/src/Pages/Home/contact.css
+++ b/src/Pages/Home/contact.css
@@ -173,7 +173,7 @@
     font-size: 1rem;
     color: var(--text-color);
   }
-  
+/*   
   .form-group label {
     position: absolute;
     left: 12px;
@@ -183,7 +183,7 @@
     pointer-events: none;
     background: var(--white);
     padding: 0 5px;
-  }
+  } */
   
   .form-group input:focus,
   .form-group select:focus,
