--- a/src/Auth/reglog.css
+++ b/src/Auth/reglog.css
@@ -77,6 +77,7 @@
   
   input {
     padding: 1rem;
+    width: 50px;
     font-size: 1rem;
     border: 2px solid #e2d5c9;
     border-radius: 0.75rem;
